# Pump-Launch-Trader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-linux-cli.yml
config/: default.toml  dev.toml  early_rug_detection_rules.toml  fresh_launch_metric_contract.toml  live.example.toml  local.example.toml  material_candidate_dataset_policy.toml  material_hunter_health_sentinels.toml  material_hunter_orchestration.toml  metric_contract.toml  paper.toml  relay_control.env.example  risk_engine.toml  rpc_enrichment_contract.toml  rug_label_collection_requirements.toml  rug_outcome_labels.toml  supply_denominator_policy.toml  vps_artifact_retention.toml  vps_pre_run_housekeeping.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  event.rs  lib.rs  math.rs  reason.rs  timeutil.rs
crates/decision/: Cargo.toml
crates/decision/src/: lib.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs  metric_engine.rs  risk_engine.rs
crates/idl/: Cargo.toml
crates/idl/src/: lib.rs
crates/ingest-geyser/: Cargo.toml
crates/ingest-geyser/src/: lib.rs
crates/ingest-shred/: Cargo.toml
crates/ingest-shred/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/r2-storage/: Cargo.toml
crates/r2-storage/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/rpc-budget/: Cargo.toml
crates/rpc-budget/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: fixtures.rs  lib.rs  live_source.rs  segments.rs  shred_exit.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: phase_one_to_three.rs
deploy/systemd/: pump-launch-quant-autopilot.env.example  pump-launch-quant-autopilot.service  pump-launch-quant-edge-once.env.example  pump-launch-quant-edge-once.service  pump-launch-quant-edge-once.timer
docs/: ARCHITECTURE.md  AUTOPILOT.md  BACKTESTING.md  BUILD_AND_DEPLOY.md  BUNDLE_DETECTION.md  DATA_SOURCES.md  EARLY_RUG_DETECTION_RULES.md  EDGE_VPS_LOCAL_POLICY.md  FEATURES.md  FEE_MODEL.md  FRESH_LAUNCH_METRIC_CANARY.md  HOLDER_METRIC_POLICY.md  MATERIAL_CANDIDATE_DATASET_POLICY.md  MATERIAL_HUNTER_HEALTH_SENTINELS.md  MATERIAL_HUNTER_ORCHESTRATION_POLICY.md  MATERIAL_HUNTER_PRE_RUN_READINESS.md  OPERATIONS.md  PIPELINE_INVARIANTS.md  PUMPFUN_METRIC_CONTRACT.md  R2_OFFLOAD.md  RISK_MODEL.md  RPC_AUDIT.md  RPC_BUDGET.md  RPC_HTTP_ENRICHMENT_METRIC_CONTRACT.md  RUG_BUNDLE_RISK_ENGINE.md  RUG_DETECTION.md  RUG_LABEL_COLLECTION_REQUIREMENTS.md  RUG_OUTCOME_LABELS.md  SAFETY.md  SECRETS_AND_ENV.md  STREAM_ONLY_CONTRACT.md  SUPPLY_DENOMINATOR_POLICY.md  VPS_ARTIFACT_RETENTION_POLICY.md  VPS_PRE_RUN_HOUSEKEEPING_POLICY.md
fixtures/geyser/: slot_gap_stream.json
fixtures/idl/: pump_mock_idl.json
fixtures/scenarios/: bundled_launch.json  capital_rotation_winner.json  clean_organic_launch.json  data_gap_token.json  dev_dump_launch.json  failed_transaction_case.json  fake_momentum_trap.json  false_discard_winner.json  high_priority_fee_case.json  migration_terminal_token.json  price_collapse_70_within_5m.json  sell_absorption_bounce.json  strong_holder_growth_winner.json  top_holder_dump.json
research_output/trading_strategy_pipeline/all_launch_tracking/: ALL_LAUNCH_PROOF_DIAGNOSIS.md  LAUNCH_ADMISSION_AUDIT.md  launch_admission_audit.json
research_output/trading_strategy_pipeline/r2_streaming_storage/: R2_STREAMING_ARTIFACT_SINK_REPORT.md  R2_STREAMING_MODE_SPLIT_REPORT.md  R2_STREAMING_RECOVERY_VALIDATION_REPORT.md
scripts/: build_buy_strategy_architecture.py  build_candidate_review_pack.py  build_dual_strategy_tracks.py  build_early_burst_backtest_readiness.py  build_early_burst_in_out_v1.py  build_early_burst_validation_dataset.py  build_positive_outcome_labels.py  build_promotion_priority_v1_shadow.py  build_replay_non_eligibility_audit.py  build_strategy_data_mart.py  build_strategy_readiness.py  build_strategy_splits.py  build_trading_strategy_pipeline.py  check_profitability_claim_gate.py  deploy_prebuilt_cli.sh  export_relay_strategy_dataset.py  export_strategy_ready_dataset.py  local_r2_first_storage_enforcer.py  local_r2_primary_storage_gc.py  local_stream_collector_preflight.sh  local_stream_collector_run.sh  local_stream_collector_validate_artifacts.sh  material_hunter_pre_run_gate.sh  material_hunter_provider_acceptance_gate.sh  phase85_diagnostic_lab.mjs  phase88_metric_completion.mjs  recover_r2_streaming_run.py  relay_control_config_preflight.sh  run_background_24h_collector.py  run_background_early_burst_searcher.py  run_clean_24h_r2_streaming_mission.py  run_live_trading.py  run_paper_trading.py  run_relay_r2_primary_batch.py  run_strategy_backtest.py  run_strategy_live.py  run_strategy_paper.py  run_strategy_replay.py  run_strategy_threshold_tuning.py  run_strategy_wallet.py  (+16 more)
scripts/strategy/: __init__.py  buy_setup.py  candidate_review.py  data_quality.py  feature_store.py  gates.py  io.py  label_store.py  leakage.py  paper.py  readiness.py  registry.py  reports.py  risk_exit.py  schemas.py  signals.py  splits.py  trading_disabled.py
scripts/strategy_pipeline/: __init__.py  backtest.py  candidate_review.py  cost_model.py  data_mart.py  dual_strategy_tracks.py  early_burst.py  early_burst_backtest_readiness.py  early_burst_in_out_v1.py  early_burst_validation.py  execution_model.py  experiment_registry.py  feature_store.py  io.py  label_store.py  latency_model.py  leakage.py  live_trading.py  paper_trading.py  positive_outcomes.py  profitability_claims.py  promotion_priority.py  readiness.py  registry.py  replay.py  replay_non_eligibility.py  reports.py  risk_model.py  schemas.py  slippage_model.py  splits.py  threshold_tuning.py  wallet.py
