[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Codex"]
repository = "https://example.invalid/pump-launch-quant"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-config = "1.8.8"
aws-credential-types = "1.2.8"
aws-sdk-s3 = "1.108.0"
base64 = "0.22.1"
bitflags = { version = "2.10.0", features = ["serde"] }
borsh = { version = "1.5.7", features = ["derive"] }
bs58 = "0.5.1"
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
parking_lot = "0.12.5"
prometheus = "0.13.4"
prost = "0.14.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
rustix = { version = "1.1.4", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
smallvec = { version = "1.15.1", features = ["serde"] }
solana-pubkey = { version = "4.2.0", features = ["curve25519"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-health = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
yellowstone-grpc-proto = "12.2.0"
zstd = "0.13.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
