[package]
name = "decision"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
features = { path = "../features" }
risk = { path = "../risk" }
sim = { path = "../sim" }
state = { path = "../state" }
rust_decimal.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
