[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
decision = { path = "../decision" }
rpc-budget = { path = "../rpc-budget" }
sim = { path = "../sim" }
state = { path = "../state" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
features = { path = "../features" }
risk = { path = "../risk" }
tempfile.workspace = true
