[package]
name = "ingest-geyser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bs58.workspace = true
common = { path = "../common" }
event-bus = { path = "../event-bus" }
futures.workspace = true
hex.workspace = true
metrics = { path = "../metrics" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
time.workspace = true
yellowstone-grpc-proto.workspace = true

[dev-dependencies]
tempfile.workspace = true
