[package]
name = "ingest-shred"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
metrics = { path = "../metrics" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
