[package]
name = "r2-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
bytes.workspace = true
common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
