[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
features = { path = "../features" }
state = { path = "../state" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
